--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-image: url("..assets/img/background.jpg");
+  background-image: url("../imgage/background.jpg");
   background-position: center;
   background-size: cover;
 }
